--- a/Lab1/CMakeLists.txt
+++ b/Lab1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Lab1 main.cpp Figure.h Rhombus.cpp Rhombus.h Pentagon.cpp Pentagon.h GeronFormula.h GeronFormula.cpp Hexagon.cpp Hexagon.h)
+add_executable(Lab1 main.cpp figure.h rhombus.cpp rhombus.h pentagon.cpp pentagon.h GeronFormula.h GeronFormula.cpp hexagon.cpp hexagon.h)
